--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /target/
 /.idea/
 *.class
+**/.idea/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -16,3 +17,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+src/main/java/com/zj/shop/service/
+src/main/resources/mybatis/mapper/
